--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,49 @@
-/*
- * This is a manifest file that'll automatically include all the stylesheets available in this directory
- * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
- * the top of the compiled file, but it's generally better to create a new file per style scope.
- *= require_self
- *= require_tree . 
-*/
+#main {
+    width: 800px;
+    margin: 0px auto;
+    border: 1px solid;
+}
+
+#status {
+    border: 1px solid;
+    margin: 10px 15px 0 15px;
+    height: 150px;
+}
+
+#status p {
+    padding: 0;
+    margin:  0;
+    font-size: 20px;
+    color: #696969;
+}
+
+#navigation {
+    border: 1px solid;
+    margin: 0 15px 0 15px;
+    height: 35px;
+}
+
+#navigation ul {
+    padding: 0px;
+    margin-top: 5px;
+}
+
+#navigation li {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    font-size: 20px;
+    width: 90px;
+    float: left;
+}
+
+#history {
+    border: 1px solid;
+    margin: 0 15px 15px 15px;
+    height: 400px;
+}
+
+#footer p {
+    text-align: center;
+    font-size: 10px;
+}
