--- a/app/views/boxes/_form.html.erb
+++ b/app/views/boxes/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@item) do |f| %>
-  <% if @item.errors.any? %>
+<%= form_for(@box) do |f| %>
+  <% if @box.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
+      <h2><%= pluralize(@box.errors.count, "error") %> prohibited this box from being saved:</h2>
 
       <ul>
-      <% @item.errors.full_messages.each do |msg| %>
+      <% @box.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
