--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span2">
+      <h3>Add new item</h3>
+    </div>
+    <div class="span10">
+      <%= yield %>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
