Created layout.css file and included bootstrap. Created index view for item.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,27 +1,25 @@
-<h1>Add new item</h1>
+<div class="container">
+  <div class="row-fluid">
+    <div class="span4">
+      <h1>Add new item</h1>
 
-<%= render 'form' %>
+      <%= render 'form' %>
+    </div>
+    <div class="span8">
 
-<h1>Listing items</h1>
+      <h1>Listing items</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+        <% @items.each do |item| %>
+          <div class="well">
+            <h2><%= item.name %></h2>
 
-<% @items.each do |item| %>
-  <tr>
-    <td><%= item.name %></td>
-    <td><%= link_to 'Show', item %></td>
-    <td><%= link_to 'Edit', edit_item_path(item) %></td>
-    <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+            <%= link_to 'Show', item %>
+            <%= link_to 'Edit', edit_item_path(item) %>
+            <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
 
-<br />
-
-<%= link_to 'New Item', new_item_path %>
+          </div>
+        <% end %>
+      </table>
+    </div>
+  </div>
+</div>
