Ability to choose a box

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :box %><br />
+    <%= f.collection_select :box, Box.all, :id, :name %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
